1. oozie logs can be robustly searched in directories 2. simplified code

--- a/src/main/resources/logExtractor.properties
+++ b/src/main/resources/logExtractor.properties
@@ -16,11 +16,10 @@
 # limitations under the License.
 #
 
-log.oozie.location = \
-  /Users/rgautam/tmp/oozie/oozie.log.2014-09-12,\
-  /Users/rgautam/tmp/oozie/oozie.log.2014-09-13,\
-  /Users/rgautam/tmp/oozie/oozie.log.2014-09-14,\
-  /Users/rgautam/tmp/oozie/oozie.log
-log.oozie.write.location = oozie_logs/
+log.oozie.location = /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon,\
+  /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon
+log.oozie.write.location = /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon/oozie_logs/
+log.oozie.filename.pattern = oozie.log*
 log.oozie.record.regex = ^201[4-9]\\-[01]\\d\\-
 log.oozie.job.regex = JOB\\[(\\d{7}\\-\\d{15}\\-oozie\\-oozi\\-[CBW])\\]
+log.oozie.max.files = 10
