--- a/src/main/resources/logExtractor.properties
+++ b/src/main/resources/logExtractor.properties
@@ -16,9 +16,9 @@
 # limitations under the License.
 #
 
-log.oozie.location = /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon,\
-  /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon
-log.oozie.write.location = /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412906490-falcon/oozie_logs/
+log.oozie.location = \
+  /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412992891-falcon
+log.oozie.write.location = /Users/rgautam/work/complete-logs/h2-ec2-oracle6-uns-1412992891-falcon/oozie_logs/
 log.oozie.filename.pattern = oozie.log*
 log.oozie.record.regex = ^201[4-9]\\-[01]\\d\\-
 log.oozie.job.regex = JOB\\[(\\d{7}\\-\\d{15}\\-oozie\\-oozi\\-[CBW])\\]
